악수 최신화
# AXU 최신버전 적용
# 0.1.0-RELEASE에 필요한 라이브러리 추가

--- a/axu4j-sample/src/main/webapp/axu/theme/Barracks-2/admin/ui/cacao/admin.css
+++ b/axu4j-sample/src/main/webapp/axu/theme/Barracks-2/admin/ui/cacao/admin.css
@@ -1,4 +1,8 @@
 @import url(//cdn.jsdelivr.net/font-nanum/1.0/nanumbarungothic/nanumbarungothic.css);
+/*
+ * barracks-cacao v0.2
+ * 2014.12.26 tom : mobile > ax-scroll-top 추가
+ */
 .none {
   display: none;
 }
@@ -56,9 +60,6 @@
   font-size: 1px;
   height: 100px;
 }
-.ax-sub-title {
-  border-bottom: 1px solid #e2e2e2;
-}
 .ax-align-left {
   text-align: left;
 }
@@ -71,7 +72,6 @@
 html,
 body {
   background: #f2f2f2;
-  color: #a6a6a6;
   height: 100%;
   margin: 0px;
   padding: 0px;
@@ -80,11 +80,11 @@ body {
   font-size: 12px;
 }
 a {
-  color: #444444;
+  color: #666666;
   text-decoration: none;
 }
 a:hover {
-  color: #a6a6a6;
+  color: #523636;
 }
 .modal-log-info-title {
   font-size: 14px;
@@ -125,7 +125,7 @@ a:hover {
 .modal-log-info-wrap .ax-loginfo li.account {
   display: block;
   float: left;
-  color: #444444;
+  color: #666666;
   font-weight: bold;
   padding: 0px 10px;
 }
@@ -217,12 +217,30 @@ a:hover {
 #AXPage .ax-header .ax-logo {
   position: absolute;
   line-height: 45px;
-  margin-top: 0px;
+  margin-top: 8px;
+}
+#AXPage .ax-header .ax-logo a.logo-icon {
+  color: #523636;
+  text-decoration: none;
+  font-size: 45px;
+}
+#AXPage .ax-header .ax-logo a.logo-icon i.axi {
+  padding: 5px;
+  font-size: 35px;
+}
+#AXPage .ax-header .ax-logo img {
+  vertical-align: middle;
+  border: 0px none;
+}
+#AXPage .ax-header .ax-logo a {
+  color: #a6a6a6;
+  vertical-align: middle;
+  text-decoration: underline;
 }
 #AXPage .ax-header .ax-top-menu {
-  padding-left: 100px;
+  padding-left: 200px;
   height: 60px;
-  width: 500px;
+  width: 600px;
 }
 #AXPage .ax-header .ax-top-menu ul {
   list-style: none;
@@ -265,15 +283,16 @@ a:hover {
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .parentMenu a {
   font-weight: bold;
+  color: #666;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .parentMenu a:hover {
-  color: skyblue;
+  color: #523636;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .parentMenu a:focus {
-  color: skyblue;
+  color: #523636;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .parentMenu a.on {
-  color: skyblue;
+  color: #523636;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .childMenu {
   position: absolute;
@@ -308,12 +327,14 @@ a:hover {
   border-radius: 3px;
   text-decoration: none;
   white-space: nowrap;
+  color: #666;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .childMenu ul li a:hover {
-  background: #eee;
+  color: #523636;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .childMenu ul li a.on {
   background: #eee;
+  color: #523636;
 }
 #AXPage .ax-header .ax-top-menu.AXMenuBox .childMenu ul li a.expand {
   background-image: url(images/rightArrows.png);
@@ -370,7 +391,7 @@ a:hover {
   margin-top: 10px;
 }
 #AXPage .ax-header .ax-loginfo li.account {
-  color: #444444;
+  color: #666666;
   font-weight: bold;
   padding: 0px 10px;
 }
@@ -394,7 +415,7 @@ a:hover {
   float: left;
   font-size: 24px;
   font-weight: normal;
-  color: #444444;
+  color: #666666;
   text-align: center;
   margin: 0px;
   padding: 0px;
@@ -404,7 +425,7 @@ a:hover {
   height: 30px;
   line-height: 30px;
   float: left;
-  color: #444444;
+  color: #666666;
   text-align: center;
   margin: 0px 0px 0px 10px;
   padding: 0px;
@@ -428,10 +449,8 @@ a:hover {
   /* 페이지 그리드 */
 }
 #AXPage .ax-body .ax-box h1 {
-  position: relative;
-  display: block;
   font-size: 20px;
-  color: #444444;
+  color: #666666;
   font-weight: normal;
   margin: 10px 0px;
   padding: 0px 0px;
@@ -440,16 +459,34 @@ a:hover {
   font-size: 14px;
   float: right;
 }
+#AXPage .ax-body .ax-box h2 {
+  font-size: 16px;
+  color: #523636;
+  font-weight: normal;
+  margin: 15px 10px 10px 10px;
+  padding: 0px 0px;
+}
+#AXPage .ax-body .ax-box h2 .more {
+  font-size: 14px;
+  float: right;
+}
 #AXPage .ax-body .ax-box p {
   font-size: 12px;
   line-height: 1.6em;
-  color: #444444;
+  color: #666666;
   font-weight: normal;
   margin: 10px 0px;
   padding: 0px;
 }
 #AXPage .ax-body .ax-box.sample-01 .caution {
   color: #ff6f64;
+}
+#AXPage .ax-body .ax-box.sample-01 .more {
+  color: #523636;
+}
+#AXPage .ax-body .ax-box.sample-01 .more:hover,
+#AXPage .ax-body .ax-box.sample-01 .more:focus {
+  text-decoration: underline;
 }
 #AXPage .ax-body .ax-box.sample-01 ul {
   list-style: none;
@@ -485,8 +522,12 @@ a:hover {
 #AXPage .ax-body .ax-box .ax-button-group .right {
   float: right;
 }
-#AXPage .ax-body .ax-box .ax-grid {
+#AXPage .ax-body .ax-box .ax-grid,
+#AXPage .ax-body .ax-box .ax-tree,
+#AXPage .ax-body .ax-box .ax-form,
+#AXPage .ax-body .ax-box .ax-section {
   margin: 10px;
+  padding: 0px;
 }
 #AXPage .ax-body .ax-content {
   float: none;
@@ -534,7 +575,7 @@ a:hover {
 }
 #AXPage .ax-aside .ax-aside-menu-box .ax-aside-menu:hover,
 #AXPage .ax-aside .ax-aside-menu-box .ax-aside-menu:focus {
-  background: #468ec8;
+  background: #523636;
 }
 #AXPage .ax-aside .ax-aside-menu-box .ax-aside-menu.on .axi-angle-double-right {
   display: inline;
@@ -556,7 +597,7 @@ a:hover {
 }
 #AXPage .ax-aside .ax-aside-box .ax-box h1 {
   font-size: 24px;
-  color: #444444;
+  color: #666666;
   font-weight: normal;
   margin: 10px 0px;
   padding: 0px 0px;
@@ -564,7 +605,7 @@ a:hover {
 #AXPage .ax-aside .ax-aside-box .ax-box p {
   font-size: 12px;
   line-height: 1.6em;
-  color: #444444;
+  color: #666666;
   font-weight: normal;
   margin: 10px 0px;
   padding: 0px;
@@ -573,7 +614,7 @@ a:hover {
   color: #ff6f64;
 }
 #AXPage .ax-aside .ax-aside-box .ax-box.sample-01 .more {
-  color: #468ec8;
+  color: #523636;
 }
 #AXPage .ax-aside .ax-aside-box .ax-box.sample-01 .more:hover,
 #AXPage .ax-aside .ax-aside-box .ax-box.sample-01 .more:focus {
@@ -594,7 +635,7 @@ a:hover {
 }
 #AXPage .ax-aside .ax-aside-box .ax-box h3 {
   font-size: 14px;
-  color: #444444;
+  color: #666666;
   font-weight: normal;
   text-align: center;
 }
@@ -603,8 +644,7 @@ a:hover {
   cursor: pointer;
 }
 #AXPage .ax-aside .ax-aside-box .ax-box h3 a.on {
-  color: #468ec8;
-  font-weight: bold;
+  color: #523636;
 }
 #AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul {
   list-style: none;
@@ -621,8 +661,11 @@ a:hover {
 }
 #AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul li a:hover,
 #AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-ul li a:focus {
-  background: #468ec8;
-  color: #ffffff;
+  background: #fff6ac;
+  color: #493334;
+}
+#AXPage .ax-aside .ax-aside-box .ax-box .ax-aside-page {
+  display: none;
 }
 #AXPage .ax-footer {
   z-index: 200;
@@ -654,9 +697,12 @@ a:hover {
   margin-left: 16px;
 }
 #AXPage.login .ax-title {
+  position: relative;
   height: 50px;
   overflow: hidden;
   padding: 20px;
+  background: #f2f2f2;
+  z-index: 100;
 }
 #AXPage.login .ax-title h1 {
   display: block;
@@ -665,17 +711,18 @@ a:hover {
   float: none;
   font-size: 24px;
   font-weight: normal;
-  color: #444444;
+  color: #666666;
   text-align: center;
   margin: 0px;
   padding: 0px;
+  color: #523636;
 }
 #AXPage.login .ax-title .desc {
   display: block;
   height: 30px;
   line-height: 30px;
   float: none;
-  color: #444444;
+  color: #666666;
   text-align: center;
   margin: 0px 0px 0px 10px;
   padding: 0px;
@@ -686,7 +733,7 @@ a:hover {
 }
 #AXPage.login .ax-box h1 {
   text-align: center;
-  color: #444444;
+  color: #523636;
   font-weight: normal;
 }
 #AXPage.login .ax-box p {
@@ -702,13 +749,6 @@ a:hover {
   display: none;
 }
 #AXPage.login .ax-box .ax-input .AXInput {
-  width: 100px;
-  width: 100%;
-  height: 40px;
-  padding: 0px;
-  text-indent: 10px;
-}
-#AXPage.login .ax-box .ax-input .AXSelect {
   width: 100px;
   width: 100%;
   height: 40px;
@@ -744,7 +784,7 @@ a:hover {
   float: none;
   font-size: 20px;
   font-weight: normal;
-  color: #444444;
+  color: #666666;
   text-align: center;
   margin: 0px;
   padding: 0px;
@@ -755,7 +795,7 @@ a:hover {
   height: 16px;
   line-height: 16px;
   float: none;
-  color: #444444;
+  color: #666666;
   text-align: center;
   margin: 0px 0px 0px 0px;
   padding: 0px;
@@ -772,7 +812,7 @@ a:hover {
   float: none;
   font-size: 16px;
   font-weight: normal;
-  color: #444444;
+  color: #666666;
   text-align: left;
   margin: 0px;
   padding: 0px;
@@ -782,7 +822,7 @@ a:hover {
   height: 16px;
   line-height: 16px;
   float: none;
-  color: #444444;
+  color: #666666;
   text-align: center;
   margin: 0px 0px 0px 0px;
   padding: 0px;
@@ -824,12 +864,11 @@ a:hover {
 #AXPage .ax-modal-footer .ax-unit.right {
   text-align: right;
 }
+.ax-scroll-top {
+  display: none;
+}
 .ax-rwd-table {
   position: relative;
-}
-.ax-rwd-table .table-title {
-  border-bottom: 1px solid #e2e2e2;
-  clear: both;
 }
 .ax-rwd-table .item-group {
   position: relative;
@@ -848,13 +887,15 @@ a:hover {
   text-align: center;
   position: relative;
 }
-.ax-rwd-table .item-group .item .item-lable {
+.ax-rwd-table .item-group .item .item-lable,
+.ax-rwd-table .item-group .item .item-label {
   position: relative;
   display: table-row;
   *display: block;
   *float: left;
 }
-.ax-rwd-table .item-group .item .item-lable span.th {
+.ax-rwd-table .item-group .item .item-lable span.th,
+.ax-rwd-table .item-group .item .item-label span.th {
   display: table-cell;
   *display: block;
   *float: left;
@@ -867,10 +908,12 @@ a:hover {
   box-sizing: border-box;
   min-width: 100px;
 }
-.ax-rwd-table .item-group .item .item-lable span.th.none {
+.ax-rwd-table .item-group .item .item-lable span.th.none,
+.ax-rwd-table .item-group .item .item-label span.th.none {
   border: 0px none;
 }
-.ax-rwd-table .item-group .item .item-lable span.td {
+.ax-rwd-table .item-group .item .item-lable span.td,
+.ax-rwd-table .item-group .item .item-label span.td {
   display: table-cell;
   *display: block;
   *float: left;
@@ -880,31 +923,41 @@ a:hover {
   *line-height: 30px;
   box-sizing: content-box;
   vertical-align: middle;
-  text-align: left;
-  min-width: 280px;
 }
-.ax-rwd-table .item-group .item .item-lable span.td.selectBox {
+.ax-rwd-table .item-group .item .item-lable span.td.selectBox,
+.ax-rwd-table .item-group .item .item-label span.td.selectBox {
   *padding-top: 7px;
   *height: 28px;
 }
-.ax-rwd-table .item-group .item .item-lable span.td.inputText {
+.ax-rwd-table .item-group .item .item-lable span.td.inputText,
+.ax-rwd-table .item-group .item .item-label span.td.inputText {
   *padding-top: 6px;
   *height: 29px;
 }
-.ax-rwd-table .item-group .item .item-lable span.td.button {
+.ax-rwd-table .item-group .item .item-lable span.td.button,
+.ax-rwd-table .item-group .item .item-label span.td.button {
   *padding-top: 6px;
   *height: 29px;
 }
-.ax-rwd-table .item-group .item .item-lable span.td select {
+.ax-rwd-table .item-group .item .item-lable span.td select,
+.ax-rwd-table .item-group .item .item-label span.td select {
   box-sizing: border-box;
   height: 25px;
   margin: 0px;
 }
-.ax-rwd-table .item-group .item .item-lable span.td input {
+.ax-rwd-table .item-group .item .item-lable span.td input,
+.ax-rwd-table .item-group .item .item-label span.td input {
   vertical-align: middle;
 }
-.ax-rwd-table .item-group .item .item-lable span.td label {
+.ax-rwd-table .item-group .item .item-lable span.td label,
+.ax-rwd-table .item-group .item .item-label span.td label {
   vertical-align: middle;
+}
+.ax-rwd-table .item-group .item:first-child .item-lable span.th,
+.ax-rwd-table .item-group .item.first-child .item-lable span.th,
+.ax-rwd-table .item-group .item:first-child .item-label span.th,
+.ax-rwd-table .item-group .item.first-child .item-label span.th {
+  border-left: none;
 }
 .ax-rwd-table .item-group .item.fullWidth {
   position: relative;
@@ -913,32 +966,42 @@ a:hover {
   clear: both;
   width: 100%;
 }
-.ax-rwd-table .item-group .item.fullWidth .item-lable {
+.ax-rwd-table .item-group .item.fullWidth .item-lable,
+.ax-rwd-table .item-group .item.fullWidth .item-label {
   position: relative;
   display: table-row;
   float: none;
   clear: both;
   width: 100%;
 }
-.ax-rwd-table .item-group .item.fullWidth .item-lable span.th {
+.ax-rwd-table .item-group .item.fullWidth .item-lable span.th,
+.ax-rwd-table .item-group .item.fullWidth .item-label span.th {
   width: 100px;
 }
 .ax-rwd-table .item-group .item.fullWidth .item-lable input[type=text],
+.ax-rwd-table .item-group .item.fullWidth .item-label input[type=text],
 .ax-rwd-table .item-group .item.fullWidth .item-lable input[type=password],
+.ax-rwd-table .item-group .item.fullWidth .item-label input[type=password],
 .ax-rwd-table .item-group .item.fullWidth .item-lable .AXInput,
+.ax-rwd-table .item-group .item.fullWidth .item-label .AXInput,
 .ax-rwd-table .item-group .item.fullWidth .item-lable select,
-.ax-rwd-table .item-group .item.fullWidth .item-lable textarea {
+.ax-rwd-table .item-group .item.fullWidth .item-label select,
+.ax-rwd-table .item-group .item.fullWidth .item-lable textarea,
+.ax-rwd-table .item-group .item.fullWidth .item-label textarea {
   width: 100%;
   height: 25px;
   box-sizing: border-box;
 }
-.ax-rwd-table .item-group .item.rightPadding0 .item-lable span.td {
+.ax-rwd-table .item-group .item.rightPadding0 .item-lable span.td,
+.ax-rwd-table .item-group .item.rightPadding0 .item-label span.td {
   padding-right: 0px;
 }
-.ax-rwd-table .item-group .item.leftPadding0 .item-lable span.td {
+.ax-rwd-table .item-group .item.leftPadding0 .item-lable span.td,
+.ax-rwd-table .item-group .item.leftPadding0 .item-label span.td {
   padding-left: 0px;
 }
-.ax-rwd-table .item-group .item.padding0 .item-lable span.td {
+.ax-rwd-table .item-group .item.padding0 .item-lable span.td,
+.ax-rwd-table .item-group .item.padding0 .item-label span.td {
   padding: 5px 0px;
 }
 .ax-rwd-table .item-group .group-clear {
@@ -1086,7 +1149,7 @@ table.ax-layout.padding20 {
   }
   #AXPage .ax-header .mx-menu-button:hover,
   #AXPage .ax-header .mx-menu-button:focus {
-    color: #468ec8;
+    color: #523636;
   }
   #AXPage .ax-body .ax-title h1 {
     margin-left: 40px;
@@ -1167,6 +1230,10 @@ table.ax-layout.padding20 {
   #AXPage div[class*="mx-"] {
     display: block;
   }
+  #AXPage .ax-header {
+    position: absolute;
+    opacity: 1;
+  }
   #AXPage .ax-header .ax-col-8 {
     width: 50%;
   }
@@ -1180,12 +1247,6 @@ table.ax-layout.padding20 {
     left: 0px;
     width: 100%;
     text-align: center;
-  }
-  #AXPage .ax-header .ax-logo a#logo-icon {
-    display: block;
-    margin: 0px auto;
-    width: 193px;
-    height: 60px;
   }
   #AXPage .ax-header .ax-top-menu {
     display: none;
@@ -1212,7 +1273,7 @@ table.ax-layout.padding20 {
   }
   #AXPage .ax-header .mx-menu-button:hover,
   #AXPage .ax-header .mx-menu-button:focus {
-    color: #468ec8;
+    color: #523636;
   }
   #AXPage .ax-body .ax-title {
     height: 50px;
@@ -1226,7 +1287,7 @@ table.ax-layout.padding20 {
     float: none;
     font-size: 24px;
     font-weight: normal;
-    color: #444444;
+    color: #666666;
     text-align: center;
     margin: 0px;
     padding: 0px;
@@ -1236,7 +1297,7 @@ table.ax-layout.padding20 {
     height: 20px;
     line-height: 20px;
     float: none;
-    color: #444444;
+    color: #666666;
     text-align: center;
     margin: 0px 0px 0px 0px;
     padding: 0px;
@@ -1259,7 +1320,10 @@ table.ax-layout.padding20 {
   #AXPage .ax-body .ax-box .ax-button-group {
     margin: 10px 3px;
   }
-  #AXPage .ax-body .ax-box .ax-grid {
+  #AXPage .ax-body .ax-box .ax-grid,
+  #AXPage .ax-body .ax-box .ax-tree,
+  #AXPage .ax-body .ax-box .ax-form,
+  #AXPage .ax-body .ax-box .ax-section {
     margin: 10px 3px 3px 3px;
   }
   #AXPage .ax-aside {
@@ -1268,7 +1332,6 @@ table.ax-layout.padding20 {
   #AXPage .ax-aside.ax-aside-open {
     position: absolute;
     width: 100%;
-    height: auto;
     left: 0px;
     top: 62px;
     padding-bottom: 50px;
@@ -1302,7 +1365,7 @@ table.ax-layout.padding20 {
     float: none;
     font-size: 20px;
     font-weight: normal;
-    color: #444444;
+    color: #666666;
     text-align: center;
     margin: 0px;
     padding: 0px;
@@ -1312,7 +1375,7 @@ table.ax-layout.padding20 {
     height: 16px;
     line-height: 16px;
     float: none;
-    color: #444444;
+    color: #666666;
     text-align: center;
     margin: 0px 0px 0px 0px;
     padding: 0px;
@@ -1341,6 +1404,39 @@ table.ax-layout.padding20 {
   #AXPage .ax-modal-footer .ax-unit.right {
     text-align: right;
   }
+  .ax-scroll-top {
+    display: block;
+    position: fixed;
+    z-index: 2;
+    top: -60px;
+    left: 0px;
+    width: 100%;
+    /* For Safari 3.1 to 6.0 */
+    -webkit-transition-property: all;
+    -webkit-transition-duration: 0.5s;
+    -webkit-transition-timing-function: linear;
+    -webkit-transition-delay: 0.3s;
+    /* Standard syntax */
+    transition-property: all;
+    transition-duration: 0.5s;
+    transition-timing-function: linear;
+    transition-delay: 0.3s;
+  }
+  .ax-scroll-top.on {
+    top: 0px;
+  }
+  .ax-scroll-top a {
+    display: block;
+    background: #523636;
+    color: #fff;
+    padding: 7px 5px;
+    width: 70px;
+    margin: 0px auto;
+    text-align: center;
+    -webkit-border-radius: 0px 0px 10px 10px;
+    -moz-border-radius: 0px 0px 10px 10px;
+    border-radius: 0px 0px 10px 10px;
+  }
 }
 @media (max-width: 500px) {
   .ax-rwd-table .item-group {
@@ -1360,12 +1456,14 @@ table.ax-layout.padding20 {
     text-align: left;
     position: relative;
   }
-  .ax-rwd-table .item-group .item .item-lable {
+  .ax-rwd-table .item-group .item .item-lable,
+  .ax-rwd-table .item-group .item .item-label {
     position: relative;
     display: block;
     float: left;
   }
-  .ax-rwd-table .item-group .item .item-lable span.th {
+  .ax-rwd-table .item-group .item .item-lable span.th,
+  .ax-rwd-table .item-group .item .item-label span.th {
     display: block;
     float: none;
     color: #616161;
@@ -1376,7 +1474,8 @@ table.ax-layout.padding20 {
     text-align: left;
     font-weight: bold;
   }
-  .ax-rwd-table .item-group .item .item-lable span.td {
+  .ax-rwd-table .item-group .item .item-lable span.td,
+  .ax-rwd-table .item-group .item .item-label span.td {
     display: block;
     float: none;
     height: auto;
@@ -1387,29 +1486,35 @@ table.ax-layout.padding20 {
     box-sizing: content-box;
     vertical-align: middle;
     text-align: left;
-    min-width: 100px;
   }
-  .ax-rwd-table .item-group .item .item-lable span.td select {
+  .ax-rwd-table .item-group .item .item-lable span.td select,
+  .ax-rwd-table .item-group .item .item-label span.td select {
     box-sizing: border-box;
     height: 25px;
     margin: 0px;
   }
-  .ax-rwd-table .item-group .item .item-lable span.td input {
+  .ax-rwd-table .item-group .item .item-lable span.td input,
+  .ax-rwd-table .item-group .item .item-label span.td input {
     vertical-align: middle;
   }
-  .ax-rwd-table .item-group .item .item-lable span.td label {
+  .ax-rwd-table .item-group .item .item-lable span.td label,
+  .ax-rwd-table .item-group .item .item-label span.td label {
     vertical-align: middle;
   }
-  .ax-rwd-table .item-group .item.secondItem .item-lable span.th {
+  .ax-rwd-table .item-group .item.secondItem .item-lable span.th,
+  .ax-rwd-table .item-group .item.secondItem .item-label span.th {
     border-left: none;
   }
-  .ax-rwd-table .item-group .item.rightPadding0 .item-lable span.td {
+  .ax-rwd-table .item-group .item.rightPadding0 .item-lable span.td,
+  .ax-rwd-table .item-group .item.rightPadding0 .item-label span.td {
     padding-right: 0px;
   }
-  .ax-rwd-table .item-group .item.leftPadding0 .item-lable span.td {
+  .ax-rwd-table .item-group .item.leftPadding0 .item-lable span.td,
+  .ax-rwd-table .item-group .item.leftPadding0 .item-label span.td {
     padding-left: 0px;
   }
-  .ax-rwd-table .item-group .item.padding0 .item-lable span.td {
+  .ax-rwd-table .item-group .item.padding0 .item-lable span.td,
+  .ax-rwd-table .item-group .item.padding0 .item-label span.td {
     padding: 5px 0px;
   }
   .ax-rwd-table .item-group .item-clear {
