--- a/axu4j-sample/src/main/webapp/WEB-INF/layouts/base.html
+++ b/axu4j-sample/src/main/webapp/WEB-INF/layouts/base.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--
+		layout에서 사용 가능한 내장 객체
+		param  : {{param}}
+		request: {{request}}
+		session: {{session}}
+		cookie : {{cookie}}
+	-->
     <!-- META -->
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
@@ -291,7 +298,7 @@
 						<li>Powered by <a href="#ax">AXCMS</a></li>
 						<li><i class="axi axi-check-circle-o"></i> 현재버전 <a href="#ax">1.0.0</a></li>
 						<li><i class="axi axi-cloud-download"></i> 최신버전 <a href="#ax">1.0.0</a></li>
-					</ul>					
+					</ul>
 				</div>
 			</div>
 			<div class="ax-col-6">
@@ -301,7 +308,7 @@
 						<li><a href="#ax"><i class="axi axi-trash-o"></i> 세션정리</a></li>
 						<li><a href="#ax"><i class="axi axi-info-circle"></i> 서버정보출력</a></li>
 						<li><a href="#ax"><i class="axi axi-share"></i> 버그리포트</a></li>						
-					</ul>					
+					</ul>
 				</div>
 			</div>
             <div class="ax-clear"></div>
