<ax:param name="param1" scope="session" /> 지원 #13
https://github.com/axisj-com/axu4j/issues/13

`<ax:set...`으로 구현
EL 지원 남았음

--- a/axu4j-sample/src/main/webapp/WEB-INF/layouts/base.html
+++ b/axu4j-sample/src/main/webapp/WEB-INF/layouts/base.html
@@ -318,5 +318,11 @@
 <!-- @@@@@@@@@@@@@@@@@@@@@@ scripts begin @@@@@@@@@@@@@@@@@@@@@@ -->
 {{{scripts}}}
 <!-- @@@@@@@@@@@@@@@@@@@@@@ scripts end   @@@@@@@@@@@@@@@@@@@@@@ -->
+<!--
+	TEST VALUES
+	{{request.ax-request-param}}
+	{{session.ax-session-param}}
+	{{cookie.ax-cookie-param}}
+-->
 </body>
 </html>
