<ax:param name="param1" scope="session" /> 지원 #13 완료
https://github.com/axisj-com/axu4j/issues/13
구현 완료

값에 EL 사용가능
set한 값은 내장객체에서 사용가능

--- a/axu4j-sample/src/main/webapp/WEB-INF/layouts/base.html
+++ b/axu4j-sample/src/main/webapp/WEB-INF/layouts/base.html
@@ -319,10 +319,9 @@
 {{{scripts}}}
 <!-- @@@@@@@@@@@@@@@@@@@@@@ scripts end   @@@@@@@@@@@@@@@@@@@@@@ -->
 <!--
-	TEST VALUES
-	{{request.ax-request-param}}
-	{{session.ax-session-param}}
-	{{cookie.ax-cookie-param}}
+	ax-request-param: {{request.ax-request-param}}
+	ax-session-param: {{session.ax-session-param}}
+	ax-cookie-param : {{cookie.ax-cookie-param}}
 -->
 </body>
 </html>
