--- a/axu4j-egovframe/src/main/webapp/ui/cacao/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cacao/admin.less
@@ -47,7 +47,7 @@
 .ax-align-center{text-align: center;}
 .ax-align-right{text-align: right;}
 html, body	{
-	background: @bgcolor-a; height:100%; margin:0px; padding:0px;-webkit-text-size-adjust:none;
+	background: @bgcolor-a; color:@color-a; height:100%; margin:0px; padding:0px;-webkit-text-size-adjust:none;
 	font-family	:"Nanum Barun Gothic", "Apple SD Gothic Neo", "Open sans", "Meiryo";
 	font-size	:12px;
 }
