--- a/axu4j-egovframe/src/main/webapp/ui/split.css
+++ b/axu4j-egovframe/src/main/webapp/ui/split.css
@@ -6,7 +6,7 @@ body {
   background: #eee;
 }
 #AXPage .cx-wrap {
-  padding: 10px 10px;
+  padding: 10px;
 }
 #AXPage .ax-footer {
   background: #eee;
