--- a/axu4j-egovframe/src/main/webapp/ui/cacao/admin.css
+++ b/axu4j-egovframe/src/main/webapp/ui/cacao/admin.css
@@ -924,7 +924,7 @@ a:hover {
   padding: 10px 0px;
   box-sizing: border-box;
   min-width: 100px;
-  background: #fff6ac;
+  background: #f7f7f7;
 }
 .ax-rwd-table .item-group .item .item-lable span.th.none,
 .ax-rwd-table .item-group .item .item-label span.th.none {
