--- a/axu4j-egovframe/src/main/webapp/ui/cocker/admin.css
+++ b/axu4j-egovframe/src/main/webapp/ui/cocker/admin.css
@@ -923,7 +923,7 @@ a:hover {
   padding: 10px 0px;
   box-sizing: border-box;
   min-width: 100px;
-  background: #f0fcff;
+  background: #f7f7f7;
 }
 .ax-rwd-table .item-group .item .item-lable span.th.none {
   border: 0px none;
