--- a/axu4j-egovframe/src/main/webapp/ui/cacao/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cacao/admin.less
@@ -672,7 +672,7 @@ a{
 					padding: 10px 0px;
 					box-sizing: border-box;
 					min-width:100px;
-					background: #fff6ac;
+					background: #f7f7f7;
 				}
 				span.th.none {
 					border: 0px none;
