--- a/axu4j-egovframe/src/main/webapp/ui/cacao/admin.less
+++ b/axu4j-egovframe/src/main/webapp/ui/cacao/admin.less
@@ -425,9 +425,10 @@ a{
       }
       .ax-aside-box{
         .ax-box{
-          width:100%; min-height:300px;
+          width:100%;
           background:@bgcolor;
-          border:@border-b;
+          border:@border-b;  
+			padding-bottom:2px;
           .util-border-radius(6px, 6px, 6px, 6px);
           .util-drop-shadow (0px, 0px, 2px, 0, 0.05);
 
