--- a/axu4j-egovframe/src/main/webapp/ui/cocker/admin.css
+++ b/axu4j-egovframe/src/main/webapp/ui/cocker/admin.css
@@ -595,7 +595,6 @@ a:hover {
 }
 #AXPage .ax-aside .ax-aside-box .ax-box {
   width: 100%;
-  min-height: 300px;
   background: #ffffff;
   border: 1px solid #e2e2e2;
   -webkit-border-radius: 6px 6px 6px 6px;
@@ -604,6 +603,7 @@ a:hover {
   -webkit-box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.05);
   -moz-box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.05);
   box-shadow: 0px 0px 2px 0 rgba(0, 0, 0, 0.05);
+  padding-bottom: 2px;
 }
 #AXPage .ax-aside .ax-aside-box .ax-box h1 {
   font-size: 24px;
