--- a/axu4j-egovframe/src/main/webapp/ui/split.less
+++ b/axu4j-egovframe/src/main/webapp/ui/split.less
@@ -1,15 +1,9 @@
 html, body{
-	background: #fff;
+	background: #F4F6FA;
 }
 #AXPage{
-	.ax-header{
-		background: #eee;
-	}
 	.cx-wrap {
 		padding: 10px;
-	}
-	.ax-footer{
-		background: #eee;
 	}
 }
 
